# quorum

./: .gitignore  AGENTS.md  Dockerfile  README.md  old_prmpts.txt
.github/: copilot-instructions.md
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/app/agents/: __init__.py  planner.py  prompts.py  research.py  reviewer.py  synthesizer.py
backend/app/api/: __init__.py  auth_limits.py  deps.py
backend/app/api/endpoints/: __init__.py  auth.py  chat.py  health.py  observability.py  users.py
backend/app/cache/: __init__.py  base.py  factory.py  memory.py  redis_backend.py  upstash.py
backend/app/config/: __init__.py  agents.py  app_settings.py  cache.py  guardrails.py  rate_limits.py  settings.py
backend/app/core/: __init__.py  agent_factory.py  bootstrap.py  database.py  exceptions.py  logging_config.py  logging_middleware.py  metrics.py  rate_limit.py  security.py  startup_checks.py  startup_console.py  tokens.py  tracing.py
backend/app/graph/: __init__.py  briefing_graph.py  briefing_nodes.py  feedback_markers.py
backend/app/guardrails/: __init__.py  input_size.py  prompt_guard.py
backend/app/models/: __init__.py  base.py  conversation.py  message.py  refresh_token.py  user.py
backend/app/schema/: __init__.py  agents.py  auth.py  conversation.py  search.py  user.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  email_render.py  email_service.py  exceptions.py  history_service.py  user_service.py
backend/app/templates/email/: base.html  password_reset.html  password_reset.txt  verify_email.html  verify_email.txt
backend/app/tools/: __init__.py  research_tools.py  search_tools.py
backend/migrations/: env.py
backend/migrations/versions/: 357336ff011c_create_users_table.py  5e062f2c7a28_refresh_tokens_table_for_revocation.py  9566376fd94c_user_verification_and_password_reset_.py  a1b2c3d4e5f6_conversations_and_messages_tables.py  b2c3d4e5f6a1_add_conversation_summary_column.py  d4e5f6a1b2c3_message_user_feedback.py
backend/scripts/: __init__.py  briefing_graph_export.py  drop_all_tables.py  migrate_db.py
backend/tests/: conftest.py  test_conversation_title.py  test_langsmith_tracing.py  test_logging_redaction.py
backend/tests/config/: test_agents_config.py  test_app_settings.py  test_cache.py  test_env_config.py  test_guardrails.py  test_rate_limits.py  test_settings.py
docs/: architecture.md  design_decisions.md
frontend/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  vite-env.d.ts
frontend/src/api/: auth.ts  chat.ts  conversations.ts  http.ts  observability.ts  types.ts  users.ts
frontend/src/assets/: base.css
frontend/src/components/: AuthCard.vue  SafeMarkdown.vue
frontend/src/lib/: briefingPipeline.ts  conversationTitle.ts  features.ts  safeMarkdown.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chatSessions.ts
frontend/src/views/: ChatView.vue  DashboardView.vue  LandingView.vue  ObservabilityView.vue
frontend/src/views/auth/: ForgotPasswordView.vue  LoginView.vue  RegisterView.vue  ResetPasswordView.vue  VerifyEmailView.vue
