[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "career-copilot"
version = "0.1.0"
description = "Andela Order Management Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=9.0",
    "slowapi>=0.1.9",
    "colorlog>=6.10.1",
    "openai-agents>=0.14.0",
    "litellm>=1.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
# Transformer extras: use with uv sync --extra transformer-cpu or --extra transformer-gpu
# PyTorch wheels selected via uv tool indices (see [tool.uv] below)
transformer-cpu = [
    "transformers>=4.51",
    "torch>=2.6",
    "accelerate>=1.0",
]
transformer-gpu = [
    "transformers>=4.51",
    "torch>=2.6",
    "accelerate>=1.0",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
# Prevent both CPU and GPU extras from being installed simultaneously
conflicts = [
    [
        { extra = "transformer-cpu" },
        { extra = "transformer-gpu" },
    ],
]
compile-bytecode = true

# Define PyTorch index URLs for CPU and GPU variants
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Route torch package to appropriate index based on extra
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "transformer-cpu" },
    { index = "pytorch-cu128", extra = "transformer-gpu" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
