[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "career-copilot"
version = "0.1.0"
description = "Andela Order Management Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.29.0",
    "colorlog>=6.10.1",
    "email-validator>=2.0.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-classic>=1.0.6",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "litellm>=1.0",
    "mailtrap>=2.5.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic-settings>=2.2",
    "pydantic>=2.7",
    "redis>=5.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=24.1.0",
    "tenacity>=9.0",
    "upstash-redis>=1.7",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
transformer-cpu = [
    "accelerate>=1.0",
    "torch>=2.6",
    "transformers>=4.51",
]
transformer-gpu = [
    "accelerate>=1.0",
    "torch>=2.6",
    "transformers>=4.51",
]
test = [
    "pytest-asyncio>=0.24",
    "pytest>=8.3",
]

[project.scripts]
quorum-migrate = "scripts.migrate_db:main"
quorum-drop-tables = "scripts.drop_all_tables:main"
quorum-briefing-graph = "scripts.briefing_graph_export:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
app = ["templates/email/*.html", "templates/email/*.txt"]

[tool.uv]
conflicts = [
    [
        { extra = "transformer-cpu" },
        { extra = "transformer-gpu" },
    ],
]
compile-bytecode = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "transformer-cpu" },
    { index = "pytorch-cu128", extra = "transformer-gpu" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
